syntax = "proto3";

package github.com.adelblande.codepix;

option go_package = "/pb";

message PixKeyRegistration {
    string kind = 1;
    string key = 2;
    string accountId = 3;
}

message PixKey {
    string kind = 1;
    string key = 2;
}

message Account {
    string accountId = 1;
    string accountNumber = 2;
    string bankId = 3;
    string bankName = 4;
    string ownerName = 5;
    string createdAt = 6;
}

message PixKeyInfo {
    string id = 1;
    string kind = 2;
    string key = 3;
    Account account = 4;
    string createdAt = 5;
}

message PixKeyCreatedResult {
    string id = 1;
    string status = 2;
    string error = 3;
}

service PixService {
    rpc RegisterPixKey(PixKeyRegistration) returns (PixKeyCreatedResult) {};
    rpc Find(PixKey) returns (PixKeyInfo) {};
}

// rodar esse comando para gerar os arquivos de conex√£o grpc
// go install google.golang.org/grpc/cmd/protoc-gen-go@latest
// go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
// go install github.com/spf13/cobra-cli@latest
// protoc --go_out=application/grpc --go-grpc_out=application/grpc application/grpc/protofiles/*.proto